feat: new ver for video

--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"> -->
     <style>
         body{
             background-color: hsl(0, 0%, 8%);
+            color: #fff;
         }
     </style>
 </head>
 <body>
-    <audio id="player" src="./assets/name.mp3" controls></audio>
+    <audio id="player" src="./assets/red.mp3" controls></audio>
     <div id="root" style="display: flex; flex-wrap: wrap;">
+    </div>
+    <div>
+        <h1 id="info"></h1>
     </div>
     <div id="lab" style="display: flex; flex-wrap: wrap; justify-content: space-around;">
     </div>
